made navigation and aside responsive

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
     <link href='https://css.gg/calendar-today.css' rel='stylesheet'>
     <link href='https://css.gg/pin.css' rel='stylesheet'>
     <link href='https://css.gg/globe-alt.css' rel='stylesheet'>
-    <!--<link href='https://css.gg/comment.css' rel='stylesheet'>
-    <link href='https://css.gg/heart.css' rel='stylesheet'>
-    <link href='https://css.gg/share.css' rel='stylesheet'>
-    <link href='https://css.gg/file-add.css' rel='stylesheet'>-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
@@ -30,16 +26,16 @@
         <nav>
             <div>
             <div class="logo"><i class="gg-twitter"></i></div>
-              <ul>
-                <li><div class="icon"><i class="gg-home-alt"></i></div><span>Home</span></li>
-                <li><div class="icon"><i class="gg-hashtag" style="transform: translateX(5px);"></i></div><span>Explore</span></li>
-                <li><div class="icon"><i class="gg-bell"></i></div><span>Notifications</span></li>
-                <li><div class="icon"><i class="gg-mail" style="transform: translateX(-2px);"></i></div><span>Messages</span></li>
-                <li><div class="icon"><i class="gg-user"></i></div><span>Profile</span></li>
-                <li><div class="icon"><i class="gg-more-alt" style="transform: translateX(5px);"></i></div><span>More</span></li>
+              <ul class="navLinks">
+                <li><div class="icon"><i class="bi bi-house-heart"></i></div><span>Home</span></li>
+                <li><div class="icon"><i class="bi bi-hash"></i></div><span>Explore</span></li>
+                <li><div class="icon"><i class="bi bi-bell"></i></div><span>Notifications</span></li>
+                <li><div class="icon"><i class="bi bi-envelope"></i></div><span>Messages</span></li>
+                <li><div class="icon"><i class="bi bi-person"></i></div><span>Profile</span></li>
+                <li><div class="icon"><i class="bi bi-three-dots"></i></div><span>More</span></li>
                 
               </ul>
-              <button id="tweetButton">Tweet</button>
+              <button id="tweetButton"><span>Tweet</span><i class="bi bi-pen"></i></button>
               </div>
               <div id="profile"><button>
                 <div id="profileImageContainer">
