designed search bar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div id="profileImageContainer">
                             <img src="https://pbs.twimg.com/profile_images/1455526835299618816/e4Sge7VW_400x400.jpg">
                             </div>
-                            <div id="profileName">
+                            <div id="profileName1">
                             <p id="name">Dishant Singh</p>
                             <p id="userName">@dishant2003</p>
                             </div>
@@ -125,8 +125,13 @@
         </div>
         </main>
         <aside>
-            <div class="search">
-            <input type="text" placeholder="Search">
+            <div class="searchBlock">
+            <div class="left">
+                <i class="bi bi-search"></i>
+            </div>
+            <div class="right">
+                <input type="text" placeholder="Search Twitter">
+            </div>
             </div>
         </aside>
     </div>
